# OpenEmbedding

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  README_cn.md  build.sh  setup.py
.github/workflows/: build.yml  release.yml
docker/: Dockerfile  Dockerfile.base  Dockerfile.build  Dockerfile.nccl  docker_build.sh
documents/cn/: benchmark.md  serving.md  training.md
documents/en/: benchmark.md  pmem.md  serving.md  train.md  training.md
examples/: criteo_data.sh  criteo_deepctr_hook.py  criteo_deepctr_network.py  criteo_deepctr_network_mirrored.py  criteo_deepctr_network_mpi.py  criteo_lr_subclass.py  criteo_preprocess.py  tensorflow_serving_client.py  tensorflow_serving_restful.py  train100.csv  wide100.csv
examples/run/: criteo_deepctr_checkpoint.sh  criteo_deepctr_horovod.sh  criteo_deepctr_mirrored.sh  criteo_deepctr_mpi.sh  criteo_deepctr_restful.sh  criteo_deepctr_serving.sh  criteo_deepctr_standalone.sh  criteo_preprocess.sh
examples/runner/: criteo_deepctr_horovod.sh  criteo_deepctr_mpi.sh  criteo_deepctr_standalone.sh  criteo_preprocess.sh
laboratory/: publish-serving.sh
laboratory/benchmark/: Dockerfile  analyze.py  benchmark.Dockerfile  benchmark.py  deepctr_criteo_model.py  parse_tensor_board.py  summary.py  tensornet.Dockerfile
laboratory/design/: cache.cpp
laboratory/inject/: Dockerfile  inject.sh  network_model.py  openembedding_inject_tensorflow.py  python  sitecustomize.py
laboratory/onnx/: criteo_deepctr_torch.py
laboratory/strangedemo/: Dockerfile.criteo  Dockerfile.push  criteo_predict.py
laboratory/strangedemo/criteo_deepctr/: criteo_deepctr.ipynb  criteo_deepctr.py
laboratory/strangedemo/criteo_deepctr_np/: criteo_deepctr.py  criteo_deepctr_np.ipynb  horovod_criteo_deepctr.py
laboratory/strangedemo/criteo_lr/: criteo_lr.ipynb  criteo_lr.py
laboratory/strangedemo/hook/: Dockerfile  install.sh  mlcompile  mlrun  openembedding_hook_tensorflow.py
openembedding/: CMakeLists.txt  __init__.py
openembedding/client/: Communication.cpp  Communication.h  Connection.cpp  Connection.h  EmbeddingVariableHandle.cpp  EmbeddingVariableHandle.h  EnvConfig.cpp  EnvConfig.h  Model.cpp  Model.h  ModelController.cpp  ModelController.h  ObjectPool.h  WorkerContext.cpp  WorkerContext.h
openembedding/entry/: c_api.cc  c_api.h  c_api_ha_test.cpp  c_api_test.cpp  c_api_test.h  controller.cc  controller.proto  masterd.cc  pmem_c_api_test.cpp  py_api.cc  server.cc
openembedding/server/: EmbeddingDumpOperator.cpp  EmbeddingDumpOperator.h  EmbeddingInitOperator.cpp  EmbeddingInitOperator.h  EmbeddingLoadOperator.cpp  EmbeddingLoadOperator.h  EmbeddingPullOperator.cpp  EmbeddingPullOperator.h  EmbeddingPushOperator.cpp  EmbeddingPushOperator.h  EmbeddingRestoreOperator.cpp  EmbeddingRestoreOperator.h  EmbeddingShardFile.h  EmbeddingStorage.h  EmbeddingStoreOperator.cpp  EmbeddingStoreOperator.h  RpcView.h
openembedding/tensorflow/: CMakeLists.txt  Prefetch.h  ThreadPool.h  __init__.py  exb.py  exb_ops.cpp
openembedding/variable/: DataType.h  EmbedddingTable.h  EmbeddingInitializer.h  EmbeddingItemPool.h  EmbeddingOptimizer.h  EmbeddingOptimizerVariable.h  EmbeddingPersistentTable.h  EmbeddingTable.h  EmbeddingVariable.cpp  EmbeddingVariable.h  EmbeddingVariable1.h  Factory.h  ItemPool.h  Meta.h  MpscGradientReducer.h  PersistManager.h  PersistentEmbeddingItemPool.h  PersistentEmbeddingOptimizerVariable.h  PersistentEmbeddingTable.h  PersistentEmbeddingTable_test.cpp  PersistentEmbeddingVariable.h  PersistentManager.h  PmemEmbeddingItemPool.h  PmemEmbeddingOptimizerVariable.h  PmemEmbeddingTable.h  PresistentEmbeddingOptimizerVariable.h  VariableAsyncTask.h  a.cpp  persist.h  persistent_embedding_table_test.cpp  pmem_embedding_table_test.cpp
test/: criteo_preprocess.cpp  optimizer_test.py
test/benchmark/: criteo_deepctr.py  criteo_deepctr_torch.py  criteo_tfrecord.py  server.py
